tests/samples/valid/recursive_structures.pn
struct FourLines
{
	lines: [4]Line,
}

word128 Line
{
	from: Position,
	to: Position,
}

word64 Position
{
	x: i32,
	y: i32,
}

struct Tree
{
	left: &Tree,
	right: &Tree,
}
