tests/samples/invalid/endless_array_as_member.pn
struct SmallVec
{
	legal: &[...]i32,
	illegal_because_infinite_size: [...]i32,
}
